objects/Account_Team__c.object
<CustomObject>
    <description>Custom Account Team object which manages the Native Account Team Object.</description>
    <fields>
        <fullName>Account_Access__c</fullName>
        <label>Account Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Teams</relationshipLabel>
        <relationshipName>Account_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Access__c</fullName>
        <label>Case Access</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Access__c</fullName>
        <label>Contact Access</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <label>Integration Flag</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_Team_Native__c</fullName>
        <label>Related Account Team (Native)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>GSS Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMTN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Team</label>
    <listViews>
        <fullName>Qualcomm</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Team_Role__c</columns>
        <columns>User__c</columns>
        <columns>Platform__c</columns>
        <columns>Opportunity_Access__c</columns>
        <columns>Source__c</columns>
        <columns>Case_Access__c</columns>
        <columns>Account_Access__c</columns>
        <columns>Contact_Access__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Qualcomm</value>
        </filters>
        <label>Qualcomm</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X_All</fullName>
        <columns>Account__c</columns>
        <columns>User__c</columns>
        <columns>Source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>X-All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000000}</displayFormat>
        <label>Account Team Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Teams</pluralLabel>
    <recordTypes>
        <fullName>Account_Team_Role_Type</fullName>
        <active>true</active>
        <label>Account Team Role Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>